# agentstack

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2026_05_30_0001-0001_initial_schema.py
docker/: api.Dockerfile  worker.Dockerfile
docs/: architecture.md
docs/adrs/: 001-vector-store-choice.md  002-chunking-strategy.md  003-agent-framework.md  004-caching-strategy.md  005-llm-provider.md  006-auth-and-multitenancy.md  007-retrieval-strategy.md  008-observability.md  009-cache-implementation.md  010-voice-architecture.md  011-frontend-architecture.md
frontend/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/public/: recorder-worklet.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/settings/: layout.tsx
frontend/src/app/voice/: layout.tsx  page.tsx
frontend/src/components/: AnswerMarkdown.tsx  AuthProvider.tsx  ChatComposer.tsx  CitationChip.tsx  DocumentList.tsx  DocumentUpload.tsx  EvalBadge.tsx  MessageBubble.tsx  Providers.tsx  RequireAuth.tsx  Sidebar.tsx  icons.tsx
frontend/src/hooks/: useStreamingQuery.ts  useVoice.ts
frontend/src/lib/: api.ts  streamQuery.ts
frontend/src/lib/voice/: client.ts  recorder-worklet.ts
infra/grafana/dashboards/: agentstack.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/prometheus/: prometheus.yml
src/agentstack/: config.py  main.py
src/agentstack/api/: deps.py  errors.py
src/agentstack/api/middleware/: auth.py  rate_limit.py  request_id.py
src/agentstack/api/routes/: auth.py  collections.py  conversations.py  documents.py  eval.py  health.py  ingest.py  query.py  voice.py
src/agentstack/core/agent/: citations.py  graph.py  nodes.py  prompts.py  tools.py
src/agentstack/core/eval/: golden.py  metrics.py  runner.py
src/agentstack/core/ingestion/: __init__.py  chunker.py  embedder.py  parser.py
src/agentstack/core/retrieval/: cache.py  hybrid.py  (+2 more)
src/agentstack/infra/: db.py  llm.py  logging.py  metrics.py  redis.py  tracing.py  vectorstore.py
src/agentstack/models/: __init__.py  api_key.py  base.py  chunk.py  collection.py  conversation.py  document.py  eval.py  user.py
src/agentstack/schemas/: __init__.py  collection.py  common.py  conversation.py  document.py  query.py  user.py
src/agentstack/services/: __init__.py  api_key_service.py  bootstrap.py  conversation_service.py  jwt_service.py  password.py  query_service.py  user_service.py  voice_service.py
src/agentstack/workers/: celery_app.py  tasks.py
tests/: conftest.py
tests/fixtures/: golden.json
tests/integration/: test_auth_e2e.py  test_collections_e2e.py  test_eval_e2e.py  test_query_e2e.py  test_voice_ws.py
tests/load/: locustfile.py
tests/unit/: test_cache_helpers.py  test_chunker.py  test_citation_accuracy.py  test_citations_extract.py  test_config.py  test_eval_metrics.py  test_health.py  test_jwt.py  test_password.py  test_rate_limit.py  test_router_node.py  test_rrf.py  test_voice_segmenter.py  test_voice_sentencer.py
(+7 files in other folders)
