[project]
name = "agentstack"
version = "0.1.0"
description = "Multi-agent RAG platform: ingestion, agentic retrieval, eval, observability."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Saswat Tulo" }]
dependencies = [
    # API + validation
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",

    # DB
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",

    # Cache + queue
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",

    # Vector store
    "qdrant-client>=1.12.0",

    # Embeddings + reranker (local)
    "sentence-transformers>=3.3.0",
    "rank-bm25>=0.2.2",

    # LLM providers
    "groq>=0.13.0",

    # Agent framework
    "langgraph>=0.2.50",
    "langchain-core>=0.3.20",

    # Document parsing
    "pypdf>=5.1.0",
    "markdown-it-py>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",

    # Web search (Week 2)
    "tavily-python>=0.5.0",

    # Eval (Week 3)
    "ragas>=0.2.6",

    # Observability
    "arize-phoenix>=7.0.0",
    "arize-phoenix-otel>=0.6.0",
    "openinference-instrumentation-langchain>=0.1.30",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",

    # Auth
    "pyjwt>=2.10.0",
    "argon2-cffi>=23.1.0",

    # Voice (Week 4)
    "silero-vad>=5.1",
    "piper-tts>=1.3",
    "soundfile>=0.12",

    # Misc
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "numpy>=1.26.0,<2.2.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "pre-commit>=4.0.0",
    "locust>=2.32.0",
    "ipython>=8.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentstack"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "C4",  # comprehensions
    "RUF",
]
ignore = ["E501"]  # let formatter handle line length

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast unit tests",
    "integration: tests that hit Docker services",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["src/agentstack"]
omit = ["*/migrations/*", "*/__init__.py"]
